Fix `.select-menu__search` spacings

--- a/src/renderer/src/styles/layout/select-menu/index.sass
+++ b/src/renderer/src/styles/layout/select-menu/index.sass
@@ -9,7 +9,7 @@
 
   &__search
     border-bottom: 1px solid var(--color-separator)
-    padding: 6px 10px 4px
+    padding: 9px 10px 8px
     display: flex
     align-items: center
     flex-shrink: 0
@@ -26,7 +26,7 @@
 
     &-input
       border: 0
-      padding: 0 0 2px
+      padding: 0
       flex-grow: 1
       letter-spacing: 0
 
